--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -22,6 +22,10 @@ ja:
         male: 男性
         female: 女性
         others: その他
+      customer/activity_stance:
+        beginer: 初心者(月1回以内)
+        mypace: マイペース(週1回以内〜月1回以上)
+        tightly: ガッツリ(週1回以上)
     errors:
       messages:
         record_invalid: 'バリデーションに失敗しました: %{errors}'
