--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -27,6 +27,9 @@ ja:
         beginer: 初心者(月1回以内)
         mypace: マイペース(週1回〜月1回以内)
         tightly: ガッツリ(週1回以上)
+      community:
+        name: コミュニティ名
+        introduction: コミュニティ紹介文
       community/activity_stance:
         beginer: 初心者(月1回以内)
         mypace: マイペース(週1回〜月1回以内)
